# core-commerce-cart

./: .coveragerc  .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  sonar-project.properties
src/: __init__.py
src/cart/domain/: repository.py
src/entrypoints/fastapi/: __main__.py  application.py  enums.py
src/resources/: settings.py  telemetry.py
tests/: conftest.py  test_version.py
tests/unit/: test_opentelemetry.py
